src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ACT_Composite_Score__c</fullName>
        <description>The ACT Composite Score loaded from Banner.  This number helps with student retention.</description>
        <label>ACT Composite Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADM_Code__c</fullName>
        <label>ADM Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADM_Name__c</fullName>
        <label>ADM Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_ROTC_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AF ROTC Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Academic_Standing_Term__c</fullName>
        <description>Banner Academic Standing Term</description>
        <inlineHelpText>Academic Standing is updated in Banner after the end of the term, so the status will always be for the previous term.</inlineHelpText>
        <label>Academic Standing Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Standing__c</fullName>
        <description>SHRTTRM_ASTD_CODE_END_OF_TERM</description>
        <inlineHelpText>This value is term specific and calculated after the term is complete for the previous term.</inlineHelpText>
        <label>Academic Standing</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Claimed_Portal_Text__c</fullName>
        <formula>IF(Account_Claimed__c = False, 

&quot;Your next step is to claim your St. Thomas account. This process establishes one password to access all online services at St. Thomas.&quot; &amp; BR() &amp; BR()&amp;


&quot;To claim your account, &quot; &amp; HYPERLINK(&quot;https://accountclaim.stthomas.edu/default.aspx/default.aspx&quot;, &quot;click here.&quot;, &apos;_blank&apos;) &amp; &quot; You will need to enter &quot; &amp; Banner_ID__c &amp; &quot; as your 9-digit St. Thomas ID number.&quot; &amp; BR() &amp; BR()&amp;

&quot;Be sure to save your St. Thomas ID and the password you create in a safe place. You will need it in the future.&quot;, &quot;&quot;)


/*IF(AND(Active_Application_Applicant_Type__c = &quot;First-Year&quot;, Account_Claimed__c = False, Applicant_Citizenship_Status__c &lt;&gt; &quot;International&quot;), &quot;First Year Student Claim Your Account.  Your Banner ID is&quot; &amp; Banner_ID__c, 
IF(AND(Active_Application_Applicant_Type__c = &quot;First-Year&quot;, Account_Claimed__c = TRUE, Applicant_Citizenship_Status__c &lt;&gt; &quot;International&quot;),&quot;First Year Student, You&apos;ve completed this step&quot;,

IF(AND(Active_Application_Applicant_Type__c = &quot;Transfer&quot;, Account_Claimed__c = FALSE, Applicant_Citizenship_Status__c &lt;&gt; &quot;International&quot;),&quot;Transfer Student, Claim Your Account.  Your Banner ID is&quot; &amp; Banner_ID__c,
IF(AND(Active_Application_Applicant_Type__c = &quot;Transfer&quot;, Account_Claimed__c = TRUE, Applicant_Citizenship_Status__c &lt;&gt; &quot;International&quot;),&quot;Transfer Student, Account Already Claimed&quot;,

IF(AND(Applicant_Citizenship_Status__c = &quot;International&quot;, Account_Claimed__c = FALSE),&quot;Int&apos;l Student, Claim Your Account.  Your Banner ID is&quot; &amp; Banner_ID__c,
IF(AND(Applicant_Citizenship_Status__c = &quot;International&quot;, Account_Claimed__c = TRUE),&quot;Int&apos;l Student, Account Already Claimed&quot;,
&quot;&quot;
))))))*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Claimed Portal Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Claimed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The St. Thomas Account Claim</description>
        <inlineHelpText>The St. Thomas Login Account Claim</inlineHelpText>
        <label>Account Claimed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_App_Prev_Curr_Armed_Forces_Duty__c</fullName>
        <formula>TEXT(EnrollmentrxRx__Active_Enrollment_Opportunity__r.Previous_Current_Armed_Forces_Duty__c)</formula>
        <label>Active App Prev/Curr Armed Forces Duty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Application_Admission_Plan__c</fullName>
        <formula>Text (EnrollmentrxRx__Active_Enrollment_Opportunity__r.Admission_Type_UG__c)</formula>
        <label>Active Application Admission Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Application_Applicant_Type__c</fullName>
        <formula>Text (EnrollmentrxRx__Active_Enrollment_Opportunity__r.Applicant_Type__c)</formula>
        <label>Active Application Applicant Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Application_College_Interest__c</fullName>
        <formula>TEXT(EnrollmentrxRx__Active_Enrollment_Opportunity__r.College_Interest__c)</formula>
        <label>Active Application College Interest</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Application_Is_Educo__c</fullName>
        <description>Is the active application flagged as working with EduCo?</description>
        <formula>ISPICKVAL(EnrollmentrxRx__Active_Enrollment_Opportunity__r.Intl_EduCo_Partnership__c, &apos;Yes&apos;)</formula>
        <inlineHelpText>Is the active application flagged as working with EduCo?</inlineHelpText>
        <label>Active Application Is Educo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Application_Owner__c</fullName>
        <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Application Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Application_Program_Catalog__c</fullName>
        <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Program_Catalog_Name__c</formula>
        <label>Active Application Program Catalog</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Application_Program_Display__c</fullName>
        <description>Display the Active Application Program (Major Display) Name on the Contact record</description>
        <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Major_Display_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Application Program Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Application_SFID__c</fullName>
        <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Application SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Application_Term__c</fullName>
        <description>Display the Active Application Start Term</description>
        <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Start_Term_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Application Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Application_Undocumented_Flag__c</fullName>
        <description>Display the Undocumented Flag from the Active Application</description>
        <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Undocumented__c</formula>
        <inlineHelpText>Display the Undocumented Flag from the Active Application</inlineHelpText>
        <label>Active Application Undocumented Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Grant_Amount__c</fullName>
        <label>Additional Grant Amount:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Non_US_Country_of_Citizenship__c</fullName>
        <label>Additional Non_US_Country of Citizenship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admissions_Status__c</fullName>
        <formula>TEXT(EnrollmentrxRx__Active_Enrollment_Opportunity__r.EnrollmentrxRx__Admissions_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admissions Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Flag__c</fullName>
        <label>Advisor Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Display Birthdate</description>
        <formula>YEAR(TODAY()) - YEAR(Birthdate) -
IF(
       OR (

 MONTH(TODAY()) &lt; MONTH(Birthdate),

                  AND(

                      MONTH(TODAY()) == MONTH(Birthdate),

                      DAY(TODAY()) &lt; DAY(Birthdate)

                    )

        ),

        1,

        0

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Caps_first_name__c</fullName>
        <formula>MID(FirstName,2,1) = &apos;A&apos;  || 
MID(FirstName,2,1) = &apos;B&apos;  ||
MID(FirstName,2,1) = &apos;C&apos;  ||
MID(FirstName,2,1) = &apos;D&apos;  ||
MID(FirstName,2,1) = &apos;E&apos;  ||
MID(FirstName,2,1) = &apos;F&apos;  ||
MID(FirstName,2,1) = &apos;G&apos;  ||
MID(FirstName,2,1) = &apos;H&apos;  ||
MID(FirstName,2,1) = &apos;I&apos;  ||
MID(FirstName,2,1) = &apos;J&apos;  ||
MID(FirstName,2,1) = &apos;K&apos;  ||
MID(FirstName,2,1) = &apos;L&apos;  ||
MID(FirstName,2,1) = &apos;M&apos;  ||
MID(FirstName,2,1) = &apos;N&apos;  ||
MID(FirstName,2,1) = &apos;O&apos;  ||
MID(FirstName,2,1) = &apos;P&apos;  ||
MID(FirstName,2,1) = &apos;Q&apos;  ||
MID(FirstName,2,1) = &apos;R&apos;  ||
MID(FirstName,2,1) = &apos;S&apos;  ||
MID(FirstName,2,1) = &apos;T&apos;  ||
MID(FirstName,2,1) = &apos;U&apos;  ||
MID(FirstName,2,1) = &apos;V&apos;  ||
MID(FirstName,2,1) = &apos;W&apos;  ||
MID(FirstName,2,1) = &apos;X&apos;  ||
MID(FirstName,2,1) = &apos;Y&apos;  ||
MID(FirstName,2,1) = &apos;Z&apos;</formula>
        <label>All Caps first name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Caps_last_name__c</fullName>
        <formula>MID(LastName,2,1) = &apos;A&apos; || 
MID(LastName,2,1) = &apos;B&apos; || 
MID(LastName,2,1) = &apos;C&apos; || 
MID(LastName,2,1) = &apos;D&apos; || 
MID(LastName,2,1) = &apos;E&apos; || 
MID(LastName,2,1) = &apos;F&apos; || 
MID(LastName,2,1) = &apos;G&apos; || 
MID(LastName,2,1) = &apos;H&apos; || 
MID(LastName,2,1) = &apos;I&apos; || 
MID(LastName,2,1) = &apos;J&apos; || 
MID(LastName,2,1) = &apos;K&apos; || 
MID(LastName,2,1) = &apos;L&apos; || 
MID(LastName,2,1) = &apos;M&apos; || 
MID(LastName,2,1) = &apos;N&apos; || 
MID(LastName,2,1) = &apos;O&apos; || 
MID(LastName,2,1) = &apos;P&apos; || 
MID(LastName,2,1) = &apos;Q&apos; || 
MID(LastName,2,1) = &apos;R&apos; || 
MID(LastName,2,1) = &apos;S&apos; || 
MID(LastName,2,1) = &apos;T&apos; || 
MID(LastName,2,1) = &apos;U&apos; || 
MID(LastName,2,1) = &apos;V&apos; || 
MID(LastName,2,1) = &apos;W&apos; || 
MID(LastName,2,1) = &apos;X&apos; || 
MID(LastName,2,1) = &apos;Y&apos; || 
MID(LastName,2,1) = &apos;Z&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Caps last name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Caps_middle_name__c</fullName>
        <formula>MID(Middle_Name__c ,2,1) = &apos;A&apos; || 
MID(Middle_Name__c,2,1) = &apos;B&apos; || 
MID(Middle_Name__c,2,1) = &apos;C&apos; || 
MID(Middle_Name__c,2,1) = &apos;D&apos; || 
MID(Middle_Name__c,2,1) = &apos;E&apos; || 
MID(Middle_Name__c,2,1) = &apos;F&apos; || 
MID(Middle_Name__c,2,1) = &apos;G&apos; || 
MID(Middle_Name__c,2,1) = &apos;H&apos; || 
MID(Middle_Name__c,2,1) = &apos;I&apos; || 
MID(Middle_Name__c,2,1) = &apos;J&apos; || 
MID(Middle_Name__c,2,1) = &apos;K&apos; || 
MID(Middle_Name__c,2,1) = &apos;L&apos; || 
MID(Middle_Name__c,2,1) = &apos;M&apos; || 
MID(Middle_Name__c,2,1) = &apos;N&apos; || 
MID(Middle_Name__c,2,1) = &apos;O&apos; || 
MID(Middle_Name__c,2,1) = &apos;P&apos; || 
MID(Middle_Name__c,2,1) = &apos;Q&apos; || 
MID(Middle_Name__c,2,1) = &apos;R&apos; || 
MID(Middle_Name__c,2,1) = &apos;S&apos; || 
MID(Middle_Name__c,2,1) = &apos;T&apos; || 
MID(Middle_Name__c,2,1) = &apos;U&apos; || 
MID(Middle_Name__c,2,1) = &apos;V&apos; || 
MID(Middle_Name__c,2,1) = &apos;W&apos; || 
MID(Middle_Name__c,2,1) = &apos;X&apos; || 
MID(Middle_Name__c,2,1) = &apos;Y&apos; || 
MID(Middle_Name__c,2,1) = &apos;Z&apos;</formula>
        <label>All Caps middle name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_caps_preferred_name__c</fullName>
        <formula>MID(Preferred_First_Name__c,2,1) = &apos;A&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;B&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;C&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;D&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;E&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;F&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;G&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;H&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;I&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;J&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;K&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;L&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;M&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;N&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;O&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;P&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;Q&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;R&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;S&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;T&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;U&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;V&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;W&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;X&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;Y&apos; || 
MID(Preferred_First_Name__c,2,1) = &apos;Z&apos;</formula>
        <label>All caps preferred name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_lower_first_name__c</fullName>
        <formula>MID(FirstName,1,1) = &apos;a&apos;  || 
MID(FirstName,1,1) = &apos;b&apos;  ||
MID(FirstName,1,1) = &apos;c&apos;  ||
MID(FirstName,1,1) = &apos;d&apos;  ||
MID(FirstName,1,1) = &apos;e&apos;  ||
MID(FirstName,1,1) = &apos;f&apos;  ||
MID(FirstName,1,1) = &apos;g&apos;  ||
MID(FirstName,1,1) = &apos;h&apos;  ||
MID(FirstName,1,1) = &apos;i&apos;  ||
MID(FirstName,1,1) = &apos;j&apos;  ||
MID(FirstName,1,1) = &apos;k&apos;  ||
MID(FirstName,1,1) = &apos;l&apos;  ||
MID(FirstName,1,1) = &apos;m&apos;  ||
MID(FirstName,1,1) = &apos;n&apos;  ||
MID(FirstName,1,1) = &apos;o&apos;  ||
MID(FirstName,1,1) = &apos;p&apos;  ||
MID(FirstName,1,1) = &apos;q&apos;  ||
MID(FirstName,1,1) = &apos;r&apos;  ||
MID(FirstName,1,1) = &apos;s&apos;  ||
MID(FirstName,1,1) = &apos;t&apos;  ||
MID(FirstName,1,1) = &apos;u&apos;  ||
MID(FirstName,1,1) = &apos;v&apos;  ||
MID(FirstName,1,1) = &apos;w&apos;  ||
MID(FirstName,1,1) = &apos;x&apos;  ||
MID(FirstName,1,1) = &apos;y&apos;  ||
MID(FirstName,1,1) = &apos;z&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All lower first name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_lower_last_name__c</fullName>
        <formula>NOT(CONTAINS(LastName, &quot;van &quot;))  &amp;&amp; 
(MID(LastName,1,1) = &apos;a&apos; || 
MID(LastName,1,1) = &apos;b&apos; || 
MID(LastName,1,1) = &apos;c&apos; || 
MID(LastName,1,1) = &apos;d&apos; || 
MID(LastName,1,1) = &apos;e&apos; || 
MID(LastName,1,1) = &apos;f&apos; || 
MID(LastName,1,1) = &apos;g&apos; || 
MID(LastName,1,1) = &apos;h&apos; || 
MID(LastName,1,1) = &apos;i&apos; || 
MID(LastName,1,1) = &apos;j&apos; || 
MID(LastName,1,1) = &apos;k&apos; || 
MID(LastName,1,1) = &apos;l&apos; || 
MID(LastName,1,1) = &apos;m&apos; || 
MID(LastName,1,1) = &apos;n&apos; || 
MID(LastName,1,1) = &apos;o&apos; || 
MID(LastName,1,1) = &apos;p&apos; || 
MID(LastName,1,1) = &apos;q&apos; || 
MID(LastName,1,1) = &apos;r&apos; || 
MID(LastName,1,1) = &apos;s&apos; || 
MID(LastName,1,1) = &apos;t&apos; || 
MID(LastName,1,1) = &apos;u&apos; || 
MID(LastName,1,1) = &apos;v&apos; || 
MID(LastName,1,1) = &apos;w&apos; || 
MID(LastName,1,1) = &apos;x&apos; || 
MID(LastName,1,1) = &apos;y&apos; || 
MID(LastName,1,1) = &apos;z&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All lower last name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_lower_middle_name__c</fullName>
        <formula>MID(Middle_Name__c,1,1) = &apos;a&apos; || 
MID(Middle_Name__c,1,1) = &apos;b&apos; || 
MID(Middle_Name__c,1,1) = &apos;c&apos; || 
MID(Middle_Name__c,1,1) = &apos;d&apos; || 
MID(Middle_Name__c,1,1) = &apos;e&apos; || 
MID(Middle_Name__c,1,1) = &apos;f&apos; || 
MID(Middle_Name__c,1,1) = &apos;g&apos; || 
MID(Middle_Name__c,1,1) = &apos;h&apos; || 
MID(Middle_Name__c,1,1) = &apos;i&apos; || 
MID(Middle_Name__c,1,1) = &apos;j&apos; || 
MID(Middle_Name__c,1,1) = &apos;k&apos; || 
MID(Middle_Name__c,1,1) = &apos;l&apos; || 
MID(Middle_Name__c,1,1) = &apos;m&apos; || 
MID(Middle_Name__c,1,1) = &apos;n&apos; || 
MID(Middle_Name__c,1,1) = &apos;o&apos; || 
MID(Middle_Name__c,1,1) = &apos;p&apos; || 
MID(Middle_Name__c,1,1) = &apos;q&apos; || 
MID(Middle_Name__c,1,1) = &apos;r&apos; || 
MID(Middle_Name__c,1,1) = &apos;s&apos; || 
MID(Middle_Name__c,1,1) = &apos;t&apos; || 
MID(Middle_Name__c,1,1) = &apos;u&apos; || 
MID(Middle_Name__c,1,1) = &apos;v&apos; || 
MID(Middle_Name__c,1,1) = &apos;w&apos; || 
MID(Middle_Name__c,1,1) = &apos;x&apos; || 
MID(Middle_Name__c,1,1) = &apos;y&apos; || 
MID(Middle_Name__c,1,1) = &apos;z&apos;</formula>
        <label>All lower middle name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_lower_preferred_name__c</fullName>
        <formula>MID(Preferred_First_Name__c ,1,1) = &apos;a&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;b&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;c&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;d&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;e&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;f&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;g&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;h&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;i&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;j&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;k&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;l&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;m&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;n&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;o&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;p&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;q&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;r&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;s&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;t&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;u&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;v&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;w&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;x&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;y&apos; || 
MID(Preferred_First_Name__c,1,1) = &apos;z&apos;</formula>
        <label>All lower preferred name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No other telephone</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anticipated_Start_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Replaces the deprecated field EnrollmentrxRx_Anticipated_Start_Term__c, which has undesirable automations attached to it</description>
        <label>Anticipated Start Term</label>
        <referenceTo>EnrollmentrxRx__Term__c</referenceTo>
        <relationshipLabel>Contacts (Anticipated Start_Term)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_Citizenship_Status__c</fullName>
        <description>Displays Citizenship Status from Active Application Record.</description>
        <formula>TEXT(EnrollmentrxRx__Active_Enrollment_Opportunity__r.Citizenship_Status__c)</formula>
        <inlineHelpText>Displays Citizenship Status from Active Application Record. Be aware this info can change between applications.</inlineHelpText>
        <label>Applicant Citizenship Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_ADM_DFC_Name__c</fullName>
        <formula>&quot;Erica Embury&quot;</formula>
        <inlineHelpText>Assigned Two-Year (DFC) Counselor</inlineHelpText>
        <label>Assigned ADM DFC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_ADM_DFC_SFID__c</fullName>
        <formula>&quot;0050a00000HHbME&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Assigned Two-Year (DFC) Counselor</inlineHelpText>
        <label>Assigned ADM DFC SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_ADM_Name__c</fullName>
        <formula>If (Degree_Sought_Program_Catalog__r.Name = &quot;Undergraduate&quot;, If ( 
(TEXT(Citizenship__c) != &quot;International&quot;), 
(If ( 
(TEXT(Inquiry_Applicant_Type__c ) = &quot;First-Year&quot;), 

(If ((EnrollmentrxRx__High_School_Code__c = &quot;000000&quot; || 
EnrollmentrxRx__High_School_Code__c = &quot;000005&quot; || 
EnrollmentrxRx__High_School_Code__c = &quot;111111&quot; || 
EnrollmentrxRx__High_School_Code__c = &quot;009991&quot; ||
School_Organization_Country_Lookup__c != &quot;United States&quot; ||
School_Organization_State_Text__c = &quot;AA&quot; || School_Organization_State_Text__c = &quot;AE&quot; ||School_Organization_State_Text__c = &quot;AS&quot;|| School_Organization_State_Text__c = &quot;AP&quot; ||School_Organization_State_Text__c = &quot;GU&quot; ||School_Organization_State_Text__c = &quot;MP&quot; ||School_Organization_State_Text__c = &quot;PR&quot; ||School_Organization_State_Text__c = &quot;VI&quot; ||
ISBLANK(EnrollmentrxRx__High_School__c)), 

If (ISBLANK(Assigned_State_ADM_Name__c), BLANKVALUE(Assigned_Zip_ADM_Name__c, Mailing_City_Lookup__r.ADM_Lookup__c), BLANKVALUE(Mailing_City_Lookup__r.ADM_Lookup__c, Assigned_State_ADM_Name__c )), 

BLANKVALUE(EnrollmentrxRx__High_School__r.ADM_Name__c, Mailing_City_Lookup__r.ADM_Lookup__c) 
)), 

BLANKVALUE(EnrollmentrxRx__High_School__r.TR_ADM_Name__c,&quot;Ted Weiers&quot;) 
)), 
(&quot;Ethan Olson&quot;) 
),&quot;ETL User&quot;)</formula>
        <inlineHelpText>Four-Year counselor assignment</inlineHelpText>
        <label>Assigned ADM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_ADM_SF_ID__c</fullName>
        <description>FY/TR &amp; CEEB &lt;&gt;null,  000000, 000005, 009991, then lookup School. School blank, lookup mailing.</description>
        <formula>If (Degree_Sought_Program_Catalog__r.Name = &quot;Undergraduate&quot;, If ( 
(TEXT(Citizenship__c) != &quot;International&quot;), 
(If ( 
(TEXT(Inquiry_Applicant_Type__c ) = &quot;First-Year&quot;), 

(If ((EnrollmentrxRx__High_School_Code__c = &quot;000000&quot; || 
EnrollmentrxRx__High_School_Code__c = &quot;000005&quot; || 
EnrollmentrxRx__High_School_Code__c = &quot;111111&quot; || 
EnrollmentrxRx__High_School_Code__c = &quot;009991&quot; || 
School_Organization_Country_Lookup__c != &quot;United States&quot; || 
School_Organization_State_Text__c = &quot;AA&quot; || School_Organization_State_Text__c = &quot;AE&quot; ||School_Organization_State_Text__c = &quot;AS&quot;|| School_Organization_State_Text__c = &quot;AP&quot; ||School_Organization_State_Text__c = &quot;GU&quot; ||School_Organization_State_Text__c = &quot;MP&quot; ||School_Organization_State_Text__c = &quot;PR&quot; ||School_Organization_State_Text__c = &quot;VI&quot; || 
ISBLANK(EnrollmentrxRx__High_School__c)),  

If (ISBLANK(Assigned_State_ADM_SF_ID__c), BLANKVALUE(Assigned_Zip_ADM_SF_ID__c,Mailing_City_Lookup__r.ADM_SF_ID__c), BLANKVALUE(Mailing_City_Lookup__r.ADM_SF_ID__c,Assigned_State_ADM_SF_ID__c)), 

BLANKVALUE(EnrollmentrxRx__High_School__r.ADM_SF_ID__c, Mailing_City_Lookup__r.ADM_SF_ID__c) 
)), 

BLANKVALUE(EnrollmentrxRx__High_School__r.TR_SF_ID__c,&quot;0050a00000HHbLa&quot;) 
)), 
(&quot;0050a00000HHbKc&quot;) 
),&quot;005j000000Dzsty&quot;)</formula>
        <inlineHelpText>Four-Year counselor assignment</inlineHelpText>
        <label>Assigned ADM SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_City_Territory__c</fullName>
        <formula>If (
     	(TEXT(Inquiry_Applicant_Type__c ) = &quot;First-Year&quot;), 
     
	(If ((ISBLANK(EnrollmentrxRx__High_School_Code__c) || EnrollmentrxRx__High_School_Code__c = &quot;000000&quot; ||
EnrollmentrxRx__High_School_Code__c = &quot;000005&quot; || EnrollmentrxRx__High_School_Code__c = &quot;009991&quot;), 
BLANKVALUE(Mailing_City_Lookup__r.Territory__c,&quot;&quot;), 
BLANKVALUE(School_Organization_City_Lookup__r.Territory__c, Mailing_City_Lookup__r.Territory__c) 
)),
      
        (UG_School_Type_Lookup__c)
   )</formula>
        <inlineHelpText>FY/TR &amp; CEEB &lt;&gt;null, 000000, 000005, 009991, then lookup School. School blank, lookup mailing.</inlineHelpText>
        <label>Assigned City Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_FA_Counselor__c</fullName>
        <label>Assigned FA Counselor</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_FA_Name__c</fullName>
        <formula>If (Degree_Sought_Program_Catalog__r.Name = &quot;Undergraduate&quot;, If ( 
(TEXT(Citizenship__c) != &quot;International&quot; &amp;&amp; (TEXT(MailingCountry__c)= &quot;United States&quot; || TEXT(MailingCountry__c) = &quot;&quot;)),
(If ( 
(TEXT(Inquiry_Applicant_Type__c ) = &quot;First-Year&quot;), 

(If ((EnrollmentrxRx__High_School_Code__c = &quot;000000&quot; || 
EnrollmentrxRx__High_School_Code__c = &quot;000005&quot; || 
EnrollmentrxRx__High_School_Code__c = &quot;111111&quot; || 
EnrollmentrxRx__High_School_Code__c = &quot;009991&quot; ||
ISBLANK(EnrollmentrxRx__High_School__c)), 

If (ISBLANK(Mailing_City_Lookup__c), BLANKVALUE(Assigned_Zip_FA_Name__c,Assigned_State_FA_Name__c), BLANKVALUE(Mailing_City_Lookup__r.FA_Name__c,Assigned_State_FA_Name__c)),
 
BLANKVALUE(EnrollmentrxRx__High_School__r.FA_Name__c, Mailing_City_Lookup__r.FA_Name__c) 
)), 

BLANKVALUE(EnrollmentrxRx__High_School__r.FA_Name__c,&quot;&quot;) 
)), 

( If( EnrollmentrxRx__High_School_Code__c = &quot;000000&quot; || EnrollmentrxRx__High_School_Code__c = &quot;000005&quot; || EnrollmentrxRx__High_School_Code__c = &quot;111111&quot; || EnrollmentrxRx__High_School_Code__c = &quot;009991&quot; || ISBLANK(EnrollmentrxRx__High_School__c), Assigned_INTL_FA_Name__c, (IF ( (TEXT(Inquiry_Applicant_Type__c ) = &quot;First-Year&quot;),EnrollmentrxRx__High_School__r.FA_Name__c,EnrollmentrxRx__High_School__r.FA_Name__c)))) 

),&quot;&quot;)</formula>
        <label>Assigned FA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_INTL_ADM_Name__c</fullName>
        <label>Assigned INTL ADM Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_INTL_ADM_SF_ID__c</fullName>
        <formula>CASE(UG_TR_INTL__c, &quot;UGOT2A&quot;,&quot;0050a00000HHbKc&quot;, &quot;UGOT1A&quot;,&quot;0050a00000HHbKc&quot;,&quot;&quot;)</formula>
        <label>Assigned INTL ADM SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_INTL_FA_Name__c</fullName>
        <formula>Case(UG_TR_INTL__c,&quot;UGOT2A&quot;,&quot;Susan Brady&quot;,&quot;UGOT1A&quot;,&quot;Susan Brady&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned INTL FA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_School_Territory__c</fullName>
        <formula>If ( (EnrollmentrxRx__High_School_Code__c = &quot;000000&quot; || EnrollmentrxRx__High_School_Code__c = &quot;000005&quot; || EnrollmentrxRx__High_School_Code__c = &quot;111111&quot; || EnrollmentrxRx__High_School_Code__c = &quot;009991&quot; || ISBLANK(EnrollmentrxRx__High_School__c)) ,Null, EnrollmentrxRx__High_School__r.GEOR_Code__c)</formula>
        <inlineHelpText>EnrollmentrxRx__High_School__r.GEOR_Code__c</inlineHelpText>
        <label>Assigned School Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_State_ADM_Name__c</fullName>
        <label>Assigned State ADM Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_State_ADM_SF_ID__c</fullName>
        <label>Assigned State ADM SF ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_State_FA_Name__c</fullName>
        <label>Assigned State FA Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_State_Territory__c</fullName>
        <inlineHelpText>Updated by Workflow based on state</inlineHelpText>
        <label>Assigned State Territory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Zip_ADM_Name__c</fullName>
        <formula>BLANKVALUE(Mailing_Zip_Code_Lookup__r.ADM_Lookup__c, &quot;&quot;)</formula>
        <label>Assigned Zip ADM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Zip_ADM_SF_ID__c</fullName>
        <formula>If ( 
(TEXT(Inquiry_Applicant_Type__c ) = &quot;First-Year&quot;), 

(If ( 
(EnrollmentrxRx__High_School_Code__c = &quot;000000&quot; || 
EnrollmentrxRx__High_School_Code__c = &quot;000005&quot; || 
EnrollmentrxRx__High_School_Code__c = &quot;009991&quot;), 
BLANKVALUE(Mailing_Zip_Code_Lookup__r.ADM_SF_ID__c, &quot;&quot;), 
BLANKVALUE(School_Organization_Zip_Lookup__r.ADM_SF_ID__c, Mailing_Zip_Code_Lookup__r.ADM_SF_ID__c) 
)), 

(EnrollmentrxRx__High_School__r.TR_SF_ID__c) 
)</formula>
        <label>Assigned Zip ADM SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Zip_Code_Territory__c</fullName>
        <formula>If ( 
(TEXT(Inquiry_Applicant_Type__c ) = &quot;First-Year&quot;), 

(If ( 
     (EnrollmentrxRx__High_School_Code__c = &quot;000000&quot; || 
      EnrollmentrxRx__High_School_Code__c = &quot;000005&quot; || 
      EnrollmentrxRx__High_School_Code__c = &quot;009991&quot;), 
      BLANKVALUE(Mailing_Zip_Code_Lookup__r.Territory__c, &quot;&quot;),
      BLANKVALUE(School_Organization_Zip_Lookup__r.Territory__c, Mailing_Zip_Code_Lookup__r.Territory__c)
    )),

(UG_School_Type_Lookup__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FY/TR &amp; CEEB &lt;&gt;null, 000000, 000005, 009991, then lookup School. School blank, lookup mailing.</inlineHelpText>
        <label>Assigned Zip Code Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Zip_FA_Name__c</fullName>
        <formula>If ( 
(TEXT(Inquiry_Applicant_Type__c ) = &quot;First-Year&quot;), 

(If ( 
(EnrollmentrxRx__High_School_Code__c = &quot;000000&quot; || 
EnrollmentrxRx__High_School_Code__c = &quot;000005&quot; || 
EnrollmentrxRx__High_School_Code__c = &quot;009991&quot;), 
BLANKVALUE(Mailing_Zip_Code_Lookup__r.FA_Name__c, &quot;&quot;), 
BLANKVALUE(School_Organization_Zip_Lookup__r.FA_Name__c, Mailing_Zip_Code_Lookup__r.FA_Name__c) 
)), 

(EnrollmentrxRx__High_School__r.TR_FA_Name__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Zip FA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Address_Returned_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Update this field when postal mail is returned for this addressee.</inlineHelpText>
        <label>Bad Address Returned Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner_Admit_Student_Type__c</fullName>
        <description>Fields feed over from Banner to assist with Student Retention.</description>
        <label>Banner Admit Student Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Admit_Term__c</fullName>
        <description>Banner Admit Term</description>
        <label>Banner Admit Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Advisor_Email__c</fullName>
        <description>Fields feed over from Banner to assist with Student Retention.</description>
        <label>Banner Primary Advisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Banner_Advisor_PROB_Email__c</fullName>
        <description>SGRADVR_ADVR_CODE = PROV Email address</description>
        <label>Banner Advisor - PROB Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Banner_Advisor_PROB__c</fullName>
        <description>SGRADVR_ADVR_CODE = PROB</description>
        <inlineHelpText>Banner Advisor where Advisor Code = PROB</inlineHelpText>
        <label>Banner Advisor - PROB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>